// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard container should display genres after going to genres tab 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="dashboard"
    >
      <div
        class="dashboard_tabs"
      >
        <div
          class="ui pointing secondary menu"
        >
          <a
            class="item"
          >
            Best new music
          </a>
          <a
            class="item"
          >
            Top Tracks
          </a>
          <a
            class="active item"
          >
            Genres
          </a>
        </div>
        <div
          class="ui segment active tab"
        >
          <div
            class="genre_tab_container"
          >
            <div
              class="genre_container"
            >
              <div
                class="genre_overlay"
              >
                <div
                  class="smooth_image_wrapper"
                >
                  <img
                    class="image"
                    src="https://picsum.photos/256?random=0"
                  />
                  <img
                    class="placeholder"
                    src="test-file-stub"
                    style="opacity: 1;"
                  />
                </div>
              </div>
              <div
                class="genre_name"
              >
                <div
                  class="svg_icon"
                >
                  test-file-stub
                </div>
                rock
              </div>
            </div>
            <div
              class="genre_container"
            >
              <div
                class="genre_overlay"
              >
                <div
                  class="smooth_image_wrapper"
                >
                  <img
                    class="image"
                    src="https://picsum.photos/256?random=1"
                  />
                  <img
                    class="placeholder"
                    src="test-file-stub"
                    style="opacity: 1;"
                  />
                </div>
              </div>
              <div
                class="genre_name"
              >
                <div
                  class="svg_icon"
                >
                  test-file-stub
                </div>
                pop
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dashboard container should display the best new music page of the dashboard 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="dashboard"
    >
      <div
        class="dashboard_tabs"
      >
        <div
          class="ui pointing secondary menu"
        >
          <a
            class="active item"
          >
            Best new music
          </a>
          <a
            class="item"
          >
            Top Tracks
          </a>
          <a
            class="item"
          >
            Genres
          </a>
        </div>
        <div
          class="ui segment active tab best_new_music_tab_pane"
        >
          <div
            class="best_new_music_menu"
          >
            <div
              class="ui large vertical menu"
            >
              <div
                class="link item best_new_music_menu_header"
              >
                Best new albums
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test title 1"
                      src="test thumbnail 1"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test title 1
                      </div>
                    </div>
                    <div
                      class="card_artist"
                    >
                      test artist 1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test title 2"
                      src="test thumbnail 2"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test title 2
                      </div>
                    </div>
                    <div
                      class="card_artist"
                    >
                      test artist 2
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="link item best_new_music_menu_header"
              >
                Best new tracks
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test track title 1"
                      src="test track thumbnail 1"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test track title 1
                      </div>
                      <i
                        aria-hidden="true"
                        class="star outline large icon card_favorite"
                        data-testid="favorite-icon-test track artist 1-test track title 1"
                      />
                    </div>
                    <div
                      class="card_artist"
                    >
                      test track artist 1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test track title 2"
                      src="test track thumbnail 2"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test track title 2
                      </div>
                      <i
                        aria-hidden="true"
                        class="star outline large icon card_favorite"
                        data-testid="favorite-icon-test track artist 2-test track title 2"
                      />
                    </div>
                    <div
                      class="card_artist"
                    >
                      test track artist 2
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dashboard container should display top tracks after going to top tracks tab 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="dashboard"
    >
      <div
        class="dashboard_tabs"
      >
        <div
          class="ui pointing secondary menu"
        >
          <a
            class="item"
          >
            Best new music
          </a>
          <a
            class="active item"
          >
            Top Tracks
          </a>
          <a
            class="item"
          >
            Genres
          </a>
        </div>
        <div
          class="ui segment active tab"
        >
          <div
            class="popular_tracks_container"
          >
            <div
              class="popular_tracks_header"
            >
              <h3>
                Top Tracks from Deezer
              </h3>
            </div>
            <table
              class="track_table"
              role="table"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    <span
                      class="center_aligned"
                    >
                      <i
                        aria-hidden="true"
                        class="hashtag icon"
                      />
                    </span>
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    <span
                      class="center_aligned"
                    >
                      <i
                        aria-hidden="true"
                        class="image icon"
                      />
                    </span>
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                     
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Title
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Artist
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Length
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    <span
                      class="select_header"
                    >
                      <div
                        class="ui fitted checkbox nuclear checkbox"
                        style="cursor: pointer;"
                      >
                        <input
                          class="hidden"
                          readonly=""
                          tabindex="0"
                          title="Toggle All Rows Selected"
                          type="checkbox"
                          value=""
                        />
                        <label />
                      </div>
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                data-rbd-droppable-context-id="0"
                data-rbd-droppable-id="track_table"
                role="rowgroup"
              >
                <tr
                  class=""
                  data-rbd-draggable-context-id="0"
                  data-rbd-draggable-id="top track 1 0"
                  role="row"
                >
                  <td
                    class="position_cell narrow"
                    role="cell"
                  >
                    <button
                      class="ui pink tiny circular icon button nuclear button add_button"
                      data-testid="play-now"
                    >
                      <i
                        aria-hidden="true"
                        class="play icon"
                      />
                    </button>
                    <span
                      class="position_cell_value"
                    >
                      1
                    </span>
                  </td>
                  <td
                    class="thumbnail_cell narrow"
                    role="cell"
                  >
                    <img
                      class="thumbnail"
                      src="top track album cover 1"
                    />
                  </td>
                  <td
                    class="favorite_cell narrow"
                    role="cell"
                  >
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless"
                    >
                      <i
                        aria-hidden="true"
                        class="heart outline icon"
                      />
                    </button>
                  </td>
                  <td
                    class="title_cell"
                    role="cell"
                  >
                    <span
                      class="title_cell_content"
                    >
                      <span
                        class="title_cell_value"
                      >
                        top track 1
                      </span>
                      <span
                        class="title_cell_buttons"
                      >
                        <button
                          class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                          data-testid="add-to-queue"
                        >
                          <i
                            aria-hidden="true"
                            class="plus icon"
                          />
                        </button>
                        <button
                          class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                          data-testid="track-popup-trigger"
                        >
                          <i
                            aria-hidden="true"
                            class="ellipsis horizontal icon"
                          />
                        </button>
                      </span>
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    top track artist 1
                  </td>
                  <td
                    role="cell"
                  >
                    01:40
                  </td>
                  <td
                    class="select_cell narrow"
                    role="cell"
                  >
                    <div
                      class="ui fitted checkbox nuclear checkbox"
                      style="cursor: pointer;"
                    >
                      <input
                        class="hidden"
                        readonly=""
                        tabindex="0"
                        title="Toggle Row Selected"
                        type="checkbox"
                        value=""
                      />
                      <label />
                    </div>
                  </td>
                </tr>
                <tr
                  class=""
                  data-rbd-draggable-context-id="0"
                  data-rbd-draggable-id="top track 2 1"
                  role="row"
                >
                  <td
                    class="position_cell narrow"
                    role="cell"
                  >
                    <button
                      class="ui pink tiny circular icon button nuclear button add_button"
                      data-testid="play-now"
                    >
                      <i
                        aria-hidden="true"
                        class="play icon"
                      />
                    </button>
                    <span
                      class="position_cell_value"
                    >
                      2
                    </span>
                  </td>
                  <td
                    class="thumbnail_cell narrow"
                    role="cell"
                  >
                    <img
                      class="thumbnail"
                      src="top track album cover 2"
                    />
                  </td>
                  <td
                    class="favorite_cell narrow"
                    role="cell"
                  >
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless"
                    >
                      <i
                        aria-hidden="true"
                        class="heart outline icon"
                      />
                    </button>
                  </td>
                  <td
                    class="title_cell"
                    role="cell"
                  >
                    <span
                      class="title_cell_content"
                    >
                      <span
                        class="title_cell_value"
                      >
                        top track 2
                      </span>
                      <span
                        class="title_cell_buttons"
                      >
                        <button
                          class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                          data-testid="add-to-queue"
                        >
                          <i
                            aria-hidden="true"
                            class="plus icon"
                          />
                        </button>
                        <button
                          class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                          data-testid="track-popup-trigger"
                        >
                          <i
                            aria-hidden="true"
                            class="ellipsis horizontal icon"
                          />
                        </button>
                      </span>
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    top track artist 2
                  </td>
                  <td
                    role="cell"
                  >
                    01:18
                  </td>
                  <td
                    class="select_cell narrow"
                    role="cell"
                  >
                    <div
                      class="ui fitted checkbox nuclear checkbox"
                      style="cursor: pointer;"
                    >
                      <input
                        class="hidden"
                        readonly=""
                        tabindex="0"
                        title="Toggle Row Selected"
                        type="checkbox"
                        value=""
                      />
                      <label />
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dashboard container should go to best new album review after clicking it 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="dashboard"
    >
      <div
        class="dashboard_tabs"
      >
        <div
          class="ui pointing secondary menu"
        >
          <a
            class="active item"
          >
            Best new music
          </a>
          <a
            class="item"
          >
            Top Tracks
          </a>
          <a
            class="item"
          >
            Genres
          </a>
        </div>
        <div
          class="ui segment active tab best_new_music_tab_pane"
        >
          <div
            class="best_new_music_menu"
          >
            <div
              class="ui large vertical menu"
            >
              <div
                class="link item best_new_music_menu_header"
              >
                Best new albums
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test title 1"
                      src="test thumbnail 1"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test title 1
                      </div>
                    </div>
                    <div
                      class="card_artist"
                    >
                      test artist 1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test title 2"
                      src="test thumbnail 2"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test title 2
                      </div>
                    </div>
                    <div
                      class="card_artist"
                    >
                      test artist 2
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="link item best_new_music_menu_header"
              >
                Best new tracks
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test track title 1"
                      src="test track thumbnail 1"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test track title 1
                      </div>
                      <i
                        aria-hidden="true"
                        class="star outline large icon card_favorite"
                        data-testid="favorite-icon-test track artist 1-test track title 1"
                      />
                    </div>
                    <div
                      class="card_artist"
                    >
                      test track artist 1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test track title 2"
                      src="test track thumbnail 2"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test track title 2
                      </div>
                      <i
                        aria-hidden="true"
                        class="star outline large icon card_favorite"
                        data-testid="favorite-icon-test track artist 2-test track title 2"
                      />
                    </div>
                    <div
                      class="card_artist"
                    >
                      test track artist 2
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="best_new_music_content"
          >
            <div
              class="review_header"
            >
              <div
                class="thumbnail"
              >
                <img
                  alt="test title 2"
                  src="test thumbnail 2"
                />
              </div>
              <div
                class="review_headings"
              >
                <div
                  class="artist"
                >
                  test artist 2
                </div>
                <div
                  class="title"
                >
                  test title 2
                </div>
              </div>
              <div
                class="score"
              >
                <div
                  class="score_box"
                >
                  8.0
                </div>
              </div>
            </div>
            <p
              class="paragraph"
            >
              test review 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dashboard container should go to best new track review after clicking it 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="dashboard"
    >
      <div
        class="dashboard_tabs"
      >
        <div
          class="ui pointing secondary menu"
        >
          <a
            class="active item"
          >
            Best new music
          </a>
          <a
            class="item"
          >
            Top Tracks
          </a>
          <a
            class="item"
          >
            Genres
          </a>
        </div>
        <div
          class="ui segment active tab best_new_music_tab_pane"
        >
          <div
            class="best_new_music_menu"
          >
            <div
              class="ui large vertical menu"
            >
              <div
                class="link item best_new_music_menu_header"
              >
                Best new albums
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test title 1"
                      src="test thumbnail 1"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test title 1
                      </div>
                    </div>
                    <div
                      class="card_artist"
                    >
                      test artist 1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test title 2"
                      src="test thumbnail 2"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test title 2
                      </div>
                    </div>
                    <div
                      class="card_artist"
                    >
                      test artist 2
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="link item best_new_music_menu_header"
              >
                Best new tracks
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test track title 1"
                      src="test track thumbnail 1"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test track title 1
                      </div>
                      <i
                        aria-hidden="true"
                        class="star outline large icon card_favorite"
                        data-testid="favorite-icon-test track artist 1-test track title 1"
                      />
                    </div>
                    <div
                      class="card_artist"
                    >
                      test track artist 1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="link item"
              >
                <div
                  class="best_new_music_card"
                >
                  <div
                    class="card_thumbnail"
                  >
                    <img
                      alt="test track title 2"
                      src="test track thumbnail 2"
                    />
                  </div>
                  <div
                    class="card_info"
                  >
                    <div
                      class="card_title_row"
                    >
                      <div
                        class="card_title"
                      >
                        test track title 2
                      </div>
                      <i
                        aria-hidden="true"
                        class="star outline large icon card_favorite"
                        data-testid="favorite-icon-test track artist 2-test track title 2"
                      />
                    </div>
                    <div
                      class="card_artist"
                    >
                      test track artist 2
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="best_new_music_content"
          >
            <div
              class="review_header"
            >
              <div
                class="thumbnail"
              >
                <img
                  alt="test track title 2"
                  src="test track thumbnail 2"
                />
              </div>
              <div
                class="review_headings"
              >
                <div
                  class="artist"
                >
                  test track artist 2
                </div>
                <div
                  class="title"
                >
                  test track title 2
                </div>
              </div>
            </div>
            <p
              class="paragraph"
            >
              track review 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
